2011-12-20 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Added support for getting currently set compression using pages and mount command
	* generic/pagesCompr.c:
	* generic/pages.h:
	* generic/pagesCompr.h:
	* generic/pagesCmd.c:
	* scripts/pages.tcl:
	* scripts/cookvfs.tcl:
	* tests/vfs.test:
	* tests/pages.test:

2011-12-15 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/cookvfs.tcl: Added support for changing compression on the fly in VFS layer
	* scripts/pages.tcl:
	* tests/common.tcl:
	* tests/vfs.test:

2011-12-14 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Added option to change compression on the fly
	* generic/pages.h:
	* generic/pagesCmd.c:
	* scripts/pages.tcl:
	* tests/pages.test:

2011-12-07 Wojciech Kocjan <zoro2@users.sourceforge.net>
        * generic/pages.c: Added support for -alwayscompress flag
        * generic/pagesCompr.c:
        * generic/pages.h:
        * generic/pagesCmd.c:
        * scripts/pages.tcl:
	* tests/pages.test:

2011-12-04 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* configure: Bumped version to 1.3.2
	* configure.in:
	* scripts/vfs.tcl:
	* scripts/pages.tcl:
	* scripts/fsindex.tcl:
	* scripts/optimize.tcl:
	* scripts/memchan.tcl:
	* scripts/cookvfs.tcl:
	* scripts/readerchannel.tcl:
	* scripts/writer.tcl:
	* pkgconfig.tcl.in:
	* doc/cookfs_pages.n:
	* doc/cookfs_fsindex.n:
	* doc/cookfs.n:
	* doc/cookfs_pages.html:
	* doc/cookfs_fsindex.html:
	* doc/cookfs.html:
	* doc/cookfs_pages.man:
	* doc/cookfs_fsindex.man:
	* doc/cookfs.man:

2011-11-29 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/pages.tcl: Fix for bug in pure Tcl and Tcl 8.4 on Windows

2011-11-22 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/vfs.tcl: Fix delete operation working properly for pure Tcl and C implementations
	* tests/vfs.test:

2011-11-22 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/fsindex.tcl: Fix for utime command handling in pure Tcl version